--- a/eks.yaml
+++ b/eks.yaml
@@ -7,7 +7,8 @@ metadata:
 managedNodeGroups:
   - name: expense-1
     instanceType: m5.large
-    desiredcapacity: 3
+    desiredCapacity: 3
+    spot: true
     
 
 
