--- a/eks.yaml
+++ b/eks.yaml
@@ -2,10 +2,10 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata: 
-   name: expense-1
+   name: expense
    region: us-east-1
 managedNodeGroups:
-  - name: expense-1
+  - name: expense-0
     instanceType: m5.large
     desiredCapacity: 3
     spot: true
